--- a/TodoSPA/App/Views/TodoList.html
+++ b/TodoSPA/App/Views/TodoList.html
@@ -1,12 +1,12 @@
 ﻿<div>
     <p class="view-loading">Loading...</p>
     <div class="panel">
-        <div class="input-group">
+        <!--<div class="input-group">
             <input class="form-control" id="view-todoDescription" />
             <span class="input-group-btn">
                 <button class="btn btn-default view-addTodo">Add</button>
             </span>
-        </div>
+        </div>-->
         <table class="table table-striped">
             <tbody class="data-container">
                 <tr class="data-template">
